fix texts and links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		          	<div class="text w-100">
 		          		<h2>Willkommen bei Shortbreak !</h2>
 			            <h1 class="mb-4 color-white">Ihr Coach in Sachen Work-<br>Life-Health-Balance</h1>
-			            <p><a href="#" class="btn btn-primary">Mehr erfahren.</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns.</a></p>
+			            <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren.</a> <a href="#contact-index" class="btn btn-white">Kontaktieren Sie uns.</a></p>
 		            </div>
 		          </div>
 		        </div>
@@ -101,7 +101,7 @@
                       <div class="text w-100">
                           <h2>Dein Gesundheits Coach</h2>
                         <h1 class="mb-4">Mache deine Gesundheit zur Gewohnheit.</h1>
-                        <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
+                        <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren</a> <a href="#contact-index" class="btn btn-white">Kontaktieren Sie uns</a></p>
                     </div>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
 				  Unser gemeinsames Ziel wird es sein, deinen Körper kraftvoll, beweglich zu machen und deinen Geist aus dem Gedankenkarussell zu lösen. Damit du 100% gesund und vital bist.
 				  </p>
 				  <div class="founder d-flex align-items-center mt-5">
-								<div class="img" style="background-image: url(images/coach-1.jpg);"></div>
+								 <!--<div class="img" style="background-image: url(images/coach-1.jpg);"></div> -->
 								<div class="text pl-3">
 									<h3 class="mb-0">Raphael Kiemann</h3>
 									<span class="position">Personal Trainer</span>
@@ -277,8 +277,8 @@
             		<span class="flaticon-diet"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Starte mit nur einem Click.</h3>
-                <p>XXX</p>
+                <h3 class="heading">Starte mit nur einem Klick.</h3>
+                <p>Deine Zeit ist Gold wert. Starte shortbreak deshalb direkt ohne unnötige Umwege. Einfach App starten und shortbreaken!  </p>
               </div>
             </div>      
           </div>
@@ -289,7 +289,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">See the difference.</h3>
-                <p>XXX</p>
+                <p>Schon nach 60 Sekunden zum spürbaren Unterschied. Health toGo für High Performer! </p>
               </div>
             </div>    
           </div>
@@ -324,7 +324,7 @@
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
           <!--<span class="subheading mb-3">Stories</span>-->	
-            <h2>Coach & App</h2>
+            <h2>Kundenmeinungen</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -337,11 +337,11 @@
 											<div class="img" style="background-image: url(images/person-1.jpg);"></div>
 											<div class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center">
 												<div class="desc w-100">
-													<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-													<p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+													<p align="justify">"Raphael kenne ich schon von seinen Personal Coachings in der Halle und schätze ihn für seine charismatische, lockere Art sehr. Als er mir vor ein paar Monaten von shortbreak erzählte war ich direkt vom Konzept begeistert. Anfangs habe ich die App bei Bedarf nach langen Meetings und monotonen Sitzphasen angewendet, habe sie aber mit der Zeit in meinen Arbeitstag integriert. Ich fühle mich danach immer wacher und konzentrierter und meine Nackenschmerzen sind außerdem auch deutlich weniger geworden."    </p>
+													<!--<p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
 													<div class="pt-4">
-														<p class="name mb-0">Joy Smith</p>
-														<span class="position">Client/Manager</span>
+														<p class="name mb-0">Annika</p>
+														<span class="position">Personalentwicklerin</span>
 													</div>
 												</div>
 											</div>
@@ -356,11 +356,11 @@
 											<div class="img" style="background-image: url(images/person-2.jpg);"></div>
 											<div class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center">
 												<div class="desc w-100">
-													<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-													<p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-													<div class="pt-4">
+													<p>Werde Mitglied unserer Community und mache shortbreak zum Teil deiner Health-Work-Routine. Die App findest du <a href="#contact-index">hier</a>.</p>
+													<!-- <p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
+													<!--<div class="pt-4">
 														<p class="name mb-0">John Doe</p>
-														<span class="position">Client</span>
+														<span class="position">Client</span> -->
 													</div>
 												</div>
 											</div>
@@ -606,7 +606,7 @@
       </div>
     </section> -->
 
-	<section class="ftco-section ftco-no-pt ftco-no-pb">
+	<section class="ftco-section ftco-no-pt ftco-no-pb" id="contact-index">
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters">
 				<div data-tf-widget="QTJ5h0ne" data-tf-hide-headers data-tf-iframe-props="title=Shortbreak" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
