--- a/blog-2.html
+++ b/blog-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Health Coach - Free Bootstrap 4 Template by Colorlib</title>
+    <title>shortbreak - Wellness fürs Büro.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -64,7 +64,7 @@
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
           	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span></p>
-            <h1 class="mb-0 bread">Blogpost attarktives BGM</h1>
+            <h1 class="mb-0 bread">Attraktives betriebliches Gesundheitsmanagement</h1>
           </div>
         </div>
       </div>
@@ -257,9 +257,9 @@
                 <div class="text">
                   <h3 class="heading"><a href="blog-1.html">Was tun bei Rückenschmerzen am Arbeitsplatz?</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Jan. 30, 2020</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> Feb. 8, 2022</a></div>
+                    <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div> -->
                   </div>
                 </div>
               </div>
@@ -268,9 +268,9 @@
                 <div class="text">
                   <h3 class="heading"><a href="blog-2.html">Wie ziehe ich neue Mitarbeiter an?</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Jan. 30, 2020</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> Feb. 10, 2022</a></div>
+                    <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div> -->
                   </div>
                 </div>
               </div>
@@ -291,8 +291,8 @@
             </div>
 
             <div class="sidebar-box ftco-animate">
-              <h3>Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              <h3>Hat Ihnen dieser Artikel gefallen?</h3>
+              <p align="justify">Ihre Meinung zählt! Haben sie Lob, Kritik oder Anregungen zu diesem oder anderen Blogposts? Kontaktieren sie uns gerne jederzeit! Alle relevanten Kontaktdaten dafür finden sie <a href="#contact-form">hier</a>.</p>
             </div>
           </div>
 
