--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 													<!--<p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
 													<div class="pt-4">
 														<p class="name mb-0">Annika</p>
-														<span class="position">Personalentwicklerin</span>
+														<span class="position">Personalentwicklung</span>
 													</div>
 												</div>
 											</div>
