--- a/index_gruen.html
+++ b/index_gruen.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -69,9 +70,9 @@
 	          <div class="row no-gutters slider-text align-items-center">
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>Willkommen bei Shortbreak !</h2>
-			            <h1 class="mb-4 color-white">Ihr Coach in Sachen Work-<br>Life-Health-Balance</h1>
-			            <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren.</a> <a href="#contact-index" class="btn btn-white">Zur App</a></p>
+		          		<h2 style="color: #000000">Willkommen bei Shortbreak !</h2>
+			            <h1 class="mb-4" style="color: #a3cb4c;">Ihr Coach in Sachen Work-<br>Life-Health-Balance</h1>
+			            <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren.</a> <a href="#contact-index" class="btn btn-white">Kontaktieren Sie uns.</a></p>
 		            </div>
 		          </div>
 		        </div>
@@ -81,12 +82,12 @@
 	      <div class="slider-item js-fullheight" style="background-image:url(images/bg_2.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row no-gutters slider-text align-items-center justify-content-end"">
+	          <div class="row no-gutters slider-text align-items-center">
 		          <div class="col-md-7 ftco-animate">
-					  <!--<div class="text w-100">
-                          <h2>Wellness fürs Büro.</h2>
-                        <h1 class="mb-4 color-white">Wie unsere Community dich gesund macht!</h1>
-                        <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Zur App</a></p>
+					  <div class="text w-100">
+                          <h2 style="color: #000000">Wellness fürs Büro.</h2>
+                        <h1 class="mb-4" style="color: #a3cb4c">Wie unsere Community dich gesund macht!</h1>
+                        <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
                     </div> -->
                   </div>
                 </div>
@@ -99,9 +100,9 @@
               <div class="row no-gutters slider-text align-items-center">
                   <div class="col-md-7 ftco-animate">
                       <div class="text w-100">
-                          <h2>Dein Gesundheits Coach</h2>
-                        <h1 class="mb-4">Mache deine Gesundheit zur Gewohnheit.</h1>
-                        <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren</a> <a href="#contact-index" class="btn btn-white">Zur App</a></p>
+                          <h2 style="color: #000000">Dein Gesundheits Coach</h2>
+                        <h1 class="mb-4" style="color: #a3cb4c">Mache deine Gesundheit zur Gewohnheit.</h1>
+                        <p><a href="#contact-index" class="btn btn-primary">Mehr erfahren</a> <a href="#contact-index" class="btn btn-white">Kontaktieren Sie uns</a></p>
                     </div>
                   </div>
                 </div>
