--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="d-block services-wrap text-center">
               <div class="img" style="background-image: url(images/services-2.jpg);"></div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Wie ziehe ich neue Mitarbeiter an?</h3>
+                <h3 class="heading">Die neuesten BGF-Maßnahmen für moderne Unternehmen (2022).</h3>
                 <p>Die neuesten BGM-Maßnahmen für moderne Unternehmen.</p>
                 <p><a href="blog-2.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
