--- a/blog-2.html
+++ b/blog-2.html
@@ -80,34 +80,34 @@
             <h2 class="mb-3">Die neuesten BGF-Maßnahmen für moderne Unternehmen (2022).</h2>
             <p align=justify>Die Schulter zwickt, der Rücken schmerzt und im Nacken zieht es. Was im ersten Moment übertrieben klingt, ist für immer mehr Berufstätige beißender Alltag. “Sitzen ist bekanntlich das neue Rauchen”, kommt es von dem/der Nebensitzer:in häufig prompt nach wiederkehrender Beschwerde über das übliche Leiden, zurück. Befriedigend ist diese Antwort leider genauso wenig wie die augenscheinliche Ausweglosigkeit der Situation. Dass Themen, wie Gesundheit und Work-Life-Balance für Arbeitnehmer:innen immer wichtiger werden, scheint heute niemanden mehr zu wundern. Als Reaktion gewinnt auch das betriebliche Gesundheitsmanagement (BGM) an Bedeutung und sucht nach praktikablen Lösungen für Arbeitnehmer:innen, die einfach in den Arbeitsalltag zu integrieren sind. Moderne Unternehmen profitieren im Wettbewerb mit Konkurrenten enorm von einer ausgefeilten Strategie für betriebliche Gesundheitsförderung (BGF). Verantwortliche des BGM fragen sich deshalb immer häufiger:  Was tun, wenn meine  Mitarbeiter:innen gar nicht jeden Tag acht Stunden am Tag “rauchen” möchten? Antworten liefert dieser Blogpost über die neuesten BGF-Maßnahmen für moderne Unternehmen.
             </p>
-            <h2 class="mb-3 mt-5">Was ist BGF?</h2>
+            <h3 class="mb-3 mt-5">Was ist BGF?</h3>
             <p align=justify>Die betriebliche Gesundheitsförderung (BGF) gehört als Teildisziplin zum betrieblichen Gesundheitsmanagement. Während BGM sich um die Organisation und strategische Planung für Maßnahmen kümmert, konzentriert sich die  BGF auf die konkrete Umsetzung der Maßnahmen und Methoden.
             </p>
             <p>
               <img src="images/image_3.jpg" alt="" class="img-fluid">
             </p>
-              <h2 class="mb-3">Welche Vorteile ergeben sich aus einer modernen BGF-Strategie?</h2>
+              <h3 class="mb-3">Welche Vorteile ergeben sich aus einer modernen BGF-Strategie?</h3>
               <p align=justify>Unternehmen profitieren von einer Strategie für BGF in vielerlei Hinsicht. Arbeitgeber:innen, die die Relevanz für Arbeitnehmer:innen erkennen und entsprechende Maßnahmen in ihre Unternehmenskultur integrieren gewinnen an Attraktivität auf dem Arbeitsmarkt und haben bei neuen Bewerbern ein wichtiges Argument auf ihrer Seite. Sind Arbeitnehmer:innen schon für das Unternehmen gewonnen wird die Bindung zum Unternehmen und die Identifizierung mit den Werten des Unternehmens, gestärkt. Es fühlt sich einfach gut an steigert die Motivation wenn der/die Arbeitgeber:in sich um mein langfristiges gesundheitliches Wohlergehen kümmert.
                   Nicht zuletzt kann die aktive BGF auch ökonomische Vorteile mit sich bringen. Ähnlich wie bei dem “Return of Investment” (ROI) kann ein Unternehmen auch mit einem “Return on Prevention” rechnen. Sind die Maßnahmen effektiv, lassen sich hohe Kosten in Form von Arbeitsausfall und Lohnfortzahlungen im Krankheitsfall einsparen. Wieso noch warten?
               </p>
-              <h2 class="mb-3">Maßnahmen</h2>
+              <h3 class="mb-3">Maßnahmen</h3>
               <p align=justify>Welche Maßnahmen gibt es überhaupt und welche sind effektiv? Im folgenden Abschnitt zeigen wir Ihnen die besten Maßnahmen für Ihre Strategie im betrieblichen Gesundheitsmanagement:
               </p>
-              <h2 class="mb-3">#1 Ernährung</h2>
+              <h4 class="mb-3">#1 Ernährung</h4>
               <p align=justify>Ein wichtiger Pfeiler für die BGF im Unternehmen ist der Themenschwerpunkt Ernährung. Ernährungsgewohnheiten beeinflussen uns maßgeblich in unserem Wohlbefinden und in unserer Leistungsfähigkeit. Eine ausgewogene Nahrungsaufnahme kann hier Wunder wirken! Organisieren Sie informationsveranstaltungen und Workshops zu den Grundlagen gesunder Ernährung und bieten Sie individuelle Ernährungsberatung für Ihre Mitarbeiter:innen. Analysieren Sie außerdem die bestehende Verpflegungssituation im Betrieb und schaffen sie eine bedarfsgerechte Gestaltung der Sozialräume. Das Investment wird sich nicht nur durch kurzfristige Energieschübe, sondern langfristig durch weniger Krankheitsausfälle rechnen und nebenbei die Unternehmenskultur steigern und einzelne Mitarbeiter:innen zufriedener stimmen!
               </p>
-              <h2 class="mb-3">#2 Bewegung</h2>
+              <h4 class="mb-3">#2 Bewegung</h4>
               <p align=justify>Lange Sitzphasen vor dem Rechner und Pausen am Schreibtisch sind nachweislich schädlich.¹ Dabei würden schon wenige Minuten Bewegung reichen diesem Effekt entgegenzuwirken! Unterstützen Sie Ihre Mitarbeitenden dabei sich täglich zu bewegen. Maßnahmen, wie kostenlos ausleihbare Firmenräder oder Hinweisschilder als Anreiz zur Treppennutzung können einfach umzusetzende Maßnahmen darstellen. Während Rabatte in Fitnessstudios und die Initiierung von Sportgruppen vor allem bereits bewegungsfreudige Mitarbeiter:innen anspricht benötigen moderne Unternehmen auch niederschwellige Angebote, die genau diejenigen erreichen, die von regelmäßiger Bewegung am meisten profitieren. Nicht zuletzt sind auch digitale Anwendungen wie <a href="#contact-form">shortBreak</a> auf dem Vormarsch, die Ihre Mitarbeiter:innen durch hunderte abwechslungsreiche Mini-Bewegungs-Sessions unterstützt eine Gewohnheit aus täglicher Bewegung zu machen. Durch die digitale Anwendung ermöglichen Sie allen in Ihrem Team einen einfachen und effektiven Zugang zur Gesundheitsförderung. Wer das liest, steht auf!
               </p>
-              <h2 class="mb-3">#3 Mentale Gesundheit</h2>
+              <h4 class="mb-3">#3 Mentale Gesundheit</h4>
               <p align=justify>Ein weiterer wichtiger Themenkomplex für Ihre richtige BGM-Strategie ist die mentale Gesundheit. Der TK-Gesundheitsreport 2021 bestätigt: Arbeitstage, die psychisch bedingt ausfallen steigen in rasendem Tempo.² Besonders die Corona-Pandemie hat diese Entwicklung noch einmal beschleunigt und zeigt vielen Unternehmen dringenden Handlungsbedarf auf. Wussten Sie, dass psychische Erkrankungen der häufigste Grund für krankheitsbedingte Frühverrentung ist?³ Belastungsfaktoren wie Stress und Ängste verursacht durch hohen Termin- und Leistungsdruck oder zu große Arbeitsmengen lassen sich durch innovative BGF-Maßnahmen entgegenwirken. Auch hier können digitale Gadgets, wie die <a href="#contact-form">shortBreak</a> unterstützen, in dem ihre regelmäßige Durchführung die Achtsamkeit stärkt und zur Stressbewältigung beiträgt.
               </p>
-              <h2 class="mb-3">Zusammenfassung</h2>
+              <h3 class="mb-3">Zusammenfassung</h3>
               <p align=justify>Unternehmen, die einen Plan für das gesundheitliche Wohlergehen ihrer Mitarbeiter:innen haben oder entwickeln, werden ihren Vorsprung in Sachen Attraktivität neuer Bewerber und Mitarbeiter:innenbindung zum Unternehmen ausbauen. Dieser Vorsprung kann sich nicht zuletzt auch ökonomisch positiv entfalten und ist somit jeden Euro wert. Digitale Anwendungen wie die <a href="#contact-form">shortBreak</a>-App können helfen die Maßnahmen im Bereich Bewegung und mentale Gesundheit zu unterstützen. </p>
 
-              <a href="http://www.bris.ac.uk/news/2018/august/older-adults.html/">http://www.bris.ac.uk/news/2018/august/older-adults.html¹</a>
-              <a href="https://www.tk.de/presse/themen/praevention/gesundheitsstudien/gesundheitsreport-2021-2108392?tkcm=aaus ">TK Gesundheitsreport²</a>
-              <a href="https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10">https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10³</a>
+              <a href="http://www.bris.ac.uk/news/2018/august/older-adults.html/">¹http://www.bris.ac.uk/news/2018/august/older-adults.html <br> </a>
+              <a href="https://www.tk.de/presse/themen/praevention/gesundheitsstudien/gesundheitsreport-2021-2108392?tkcm=aaus ">²TK Gesundheitsreport <br> </a>
+              <a href="https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10">³https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10</a>
 
               <!--<div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
