--- a/blog-2.html
+++ b/blog-2.html
@@ -103,11 +103,12 @@
               <p align=justify>Ein weiterer wichtiger Themenkomplex für Ihre richtige BGM-Strategie ist die mentale Gesundheit. Der TK-Gesundheitsreport 2021 bestätigt: Arbeitstage, die psychisch bedingt ausfallen steigen in rasendem Tempo.² Besonders die Corona-Pandemie hat diese Entwicklung noch einmal beschleunigt und zeigt vielen Unternehmen dringenden Handlungsbedarf auf. Wussten Sie, dass psychische Erkrankungen der häufigste Grund für krankheitsbedingte Frühverrentung ist?³ Belastungsfaktoren wie Stress und Ängste verursacht durch hohen Termin- und Leistungsdruck oder zu große Arbeitsmengen lassen sich durch innovative BGF-Maßnahmen entgegenwirken. Auch hier können digitale Gadgets, wie die <a href="#contact-form">shortBreak</a> unterstützen, in dem ihre regelmäßige Durchführung die Achtsamkeit stärkt und zur Stressbewältigung beiträgt.
               </p>
               <h3 class="mb-3">Zusammenfassung</h3>
-              <p align=justify>Unternehmen, die einen Plan für das gesundheitliche Wohlergehen ihrer Mitarbeiter:innen haben oder entwickeln, werden ihren Vorsprung in Sachen Attraktivität neuer Bewerber und Mitarbeiter:innenbindung zum Unternehmen ausbauen. Dieser Vorsprung kann sich nicht zuletzt auch ökonomisch positiv entfalten und ist somit jeden Euro wert. Digitale Anwendungen wie die <a href="#contact-form">shortBreak</a>-App können helfen die Maßnahmen im Bereich Bewegung und mentale Gesundheit zu unterstützen. </p>
+              <p align=justify>Unternehmen, die einen Plan für das gesundheitliche Wohlergehen ihrer Mitarbeiter:innen haben oder entwickeln, werden ihren Vorsprung in Sachen Attraktivität neuer Bewerber und Mitarbeiter:innenbindung zum Unternehmen ausbauen. Dieser Vorsprung kann sich nicht zuletzt auch ökonomisch positiv entfalten und ist somit jeden Euro wert. Digitale Anwendungen wie die <a href="#contact-form">shortBreak</a>-App können helfen die Maßnahmen im Bereich Bewegung und mentale Gesundheit zu unterstützen. <br><br> </p>
 
-              <a href="http://www.bris.ac.uk/news/2018/august/older-adults.html/">¹http://www.bris.ac.uk/news/2018/august/older-adults.html <br> </a>
-              <a href="https://www.tk.de/presse/themen/praevention/gesundheitsstudien/gesundheitsreport-2021-2108392?tkcm=aaus ">²TK Gesundheitsreport <br> </a>
-              <a href="https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10">³https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10</a>
+              <a href="http://www.bris.ac.uk/news/2018/august/older-adults.html/">¹http://www.bris.ac.uk/news/2018/august/older-adults.html <br><br> </a>
+              <a href="https://www.tk.de/presse/themen/praevention/gesundheitsstudien/gesundheitsreport-2021-2108392?tkcm=aaus ">²TK Gesundheitsreport <br><br> </a>
+              <a href="https://www.baua.de/DE/Angebote/Publikationen/Berichte/Suga-2017.pdf?__blob=publicationFile&v=10">³Sicherheit und Gesundheit
+                  bei der Arbeit –Berichtsjahr 2017</a>
 
               <!--<div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
